[package]
name = "optitrack"
version = "0.3.1"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.21.0", features = ["derive"] }
bytes = { version = "1.9.0", features = ["serde"] }
env_logger = "0.11.6"
glam = { version = "0.29.2", features = ["debug-glam-assert", "glam-assert", "serde"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }

